--- a/css/_clientes.scss
+++ b/css/_clientes.scss
@@ -1,9 +1,10 @@
 .clientes{
+    padding-left: 32px;
+    padding-right: 32px;
     h3{
         font-size: 18px;
         line-height: 32px;
     }
-    padding: 40px 0;
     padding-bottom: 80px;
     padding-top: 80px;
     max-width: 1120px;
