--- a/css/_aire-card.scss
+++ b/css/_aire-card.scss
@@ -34,15 +34,20 @@
 @media(min-width: 992px) {
     .aire-card{
         justify-content: center;
+        padding-top: 32px;
+        padding-left: 32px;
+        padding-right: 32px;
         .aire-card-cont {
-            max-width: 544px;
+            max-width: 560px;
             margin: initial;
             margin-bottom: 42px;
          }
     }
 }
-@media(max-width: 768px) {
+@media(max-width: 991px) {
     .aire-card{
-        display: block;
+       
+        display: flex;
+        flex-direction: column;
     }
 }
