--- a/css/_destacados.scss
+++ b/css/_destacados.scss
@@ -53,3 +53,14 @@
   }
 }
 
+@media (max-width: 768px) {
+  .destacados{
+    .proyecto{
+      width: 100%;
+      max-width: initial;
+      margin-left: 16px;
+      margin-right: 16px;
+    }
+  }
+}
+
