--- a/css/_formatting.scss
+++ b/css/_formatting.scss
@@ -21,3 +21,9 @@ li{
         font-size: 32px;
     }
 }
+// @media  (max-width: 768px){
+//    section{
+//     padding-left:32px;
+//     padding-right:32px;
+//    }
+// }
