--- a/css/_icon-squares.scss
+++ b/css/_icon-squares.scss
@@ -57,9 +57,13 @@
         font-size: 24px;
     }
 }
-@media (max-width: 992px){
+@media (max-width: 991px){
     .main-squares-cont{
         display: block;
+    }
+    .icon-squares{
+        max-width: 100%;
+        margin-top:80px
     }
 }
 @media (min-width: 992px){
