--- a/css/_cubrir.scss
+++ b/css/_cubrir.scss
@@ -13,7 +13,7 @@
     .title-text-img{
         p{
             color: #757575;
-            padding: 4% 8% 4% 0;
+            padding: 32px 0px;
         }
         h3{
             padding-right: 8%;
@@ -25,7 +25,7 @@
     }
     .inner-cubrir{
         background-color: #fff;
-        padding: 8%;
+        padding: 32px;
         margin-top: 64px;
         border-radius: 16px;
         max-width: 1120px;
@@ -99,13 +99,28 @@
         }
     }
 }
-@media(max-width:992px){
+@media(min-width:1024px){
+    .hidden-min-width-1024{
+        display: none;
+    }
+}
+@media(max-width:1024px){
     #cubrir{  
+        .hidden-til-1024{
+            display: none;
+        }
             img{
-                min-width: initial;
+                min-width: 100%;
+                height: auto;
+                width: 100%;
+                max-width: 100%;
+                max-height: 100%;
             }
         .title-text-img {
             display: block; 
         }
+    }
+    .icon-header-cont {
+        flex-direction: column;
     }
 }
