--- a/css/_cubrir.scss
+++ b/css/_cubrir.scss
@@ -7,7 +7,7 @@
             margin-bottom: 16px;
         }
     }
-    padding: 42px 4%;
+    padding: 42px 32px;
     background-color: #f3f6ff;
     margin-top: 64px; 
     .title-text-img{
@@ -72,7 +72,7 @@
     justify-content: center;
     max-width: 1140px;
 }
-@media(min-width:992px){
+@media(min-width:1024px){
     #cubrir {
         .inner-cubrir {
         background-color: #fff;
@@ -100,6 +100,9 @@
     }
 }
 @media(min-width:1024px){
+    #cubrir .title-text-img p {
+       padding-right: 32px;
+}
     .hidden-min-width-1024{
         display: none;
     }
